# adventofcode2024

./: .gitignore  README.md
day1/src/: main.rs  part1.rs  part2.rs
day10/src/: part1.rs  part2.rs
day11/src/: part1.rs  part2.rs
day12/src/: part1.rs  part2.rs
day13/: Cargo.toml
day13/src/: part1.rs  part2.rs  utils.rs
day14/: Cargo.toml
day14/src/: part1.rs  part2.rs
day15/src/: main.rs  part1.rs  part2.rs
day16/src/: part1.rs  part2.rs
day17/src/: part1.rs  part2.rs
day18/: Cargo.toml
day18/src/: main.rs  part1.rs  part2.rs
day19/src/: part1.rs  part2.rs
day2/src/: main.rs  part1.rs  part2.rs
day20/src/: part1.rs  part2.rs
day3/src/: part1.rs  part2.rs
day4/src/: part1.rs  part2.rs
day5/src/: part1.rs  part2.rs
day6/src/: main.rs  part1.rs  part2.rs
day7/: Cargo.toml
day7/src/: part1.rs  part2.rs
day8/src/: part1.rs  part2.rs
day9/src/: part1.rs  part2.rs
template/src/: main.rs  part2.rs
