[package]
name = "adventofcode2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-client = "0.2"
ndarray = { version = "0.15.6", features = ["rayon", "approx"] }
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl"] }
ndarray-stats = "0.5.1"
intel-mkl-src = "0.8.1"
